test/fail/invalid_types6.min
program
    array x[3] := 1, 2, 3
start
    x[0] = "123" !
end
